fix(input): fixed success icon align

--- a/packages/input/src/vars.css
+++ b/packages/input/src/vars.css
@@ -26,7 +26,7 @@
 
     /* display */
     --input-error-icon-display: none;
-    --input-success-icon-display: block;
+    --input-success-icon-display: flex;
 
     /* управляет видимостью иконки ошибки, если она стоит рядом с другой иконкой */
     --input-error-icon-not-alone-display: none;
